--- a/dashboard_uni.html
+++ b/dashboard_uni.html
@@ -60,10 +60,10 @@
           <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Service</a>
+          <a class="nav-link" href="#">Service</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="compan.html">Company</a>
+          <a class="nav-link" href="company.html">Company</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">University</a>
@@ -76,50 +76,40 @@
 
 
     <div class="container-fluid">
-      <h1 class="text-center">Login</h1>
+      <h1 class="text-center">University Dashboard</h1>
       <div class="row">
-          <div class="col-md-4 mx-auto">
-            <form class="form-horizontal container-sm card justify-content-md-center">
-                <div class="form-group">
-                <label for="inputEmail3" class="col-form-label">Email</label>
-                <div>
-                  <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
-                </div>
-                </div>
-
-
-                <div class="form-group">
-                <label for="inputPassword3" class="col-form-label">Password</label>
-                <div>
-                  <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
-                </div>
-                </div>
-
-
-                <div class="form-group">
-                <div>
-                  <button type="submit" class="btn btn-primary btn-block">SIGN IN</button>
-                </div>
-                </div>
-
-
-                <div class="form-group">
-                <div style="text-align:center">
-                    <a href="#">Forgot Password</a>
-                </div>
-              </div>
-
-              <div class="form-group">
-              <div style="text-align:center">
-                  <a href="create_uni.html">Create Account</a>
-              </div>
-              </div> 
-                </form>
+          <div class="col-md-8 mx-auto">
+            <table class="table table-bordered">
+<thead>
+  <tr>
+    <th scope="col">University name</th>
+    <td scope="col">AMCET</td>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <th scope="row">Area</th>
+    <td>Mbezi beach</td>
+  </tr>
+  <tr>
+    <th scope="row">Region</th>
+    <td>Kinondoni</td>
+  </tr>
+  <tr>
+    <th scope="District">District</th>
+    <td>Dar es salaam</td>
+  </tr>
+</tbody>
+</table>
           </div>
       </div>
 
         </div>
-       
+
+
+
+
+
 
     </body>
 </html>
