--- a/student_apply.html
+++ b/student_apply.html
@@ -60,10 +60,10 @@
           <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Service</a>
+          <a class="nav-link" href="#">Service</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="compan.html">Company</a>
+          <a class="nav-link" href="company.html">Company</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">University</a>
@@ -76,50 +76,75 @@
 
 
     <div class="container-fluid">
-      <h1 class="text-center">Login</h1>
+      <h1 class="text-center">Student Application</h1>
       <div class="row">
-          <div class="col-md-4 mx-auto">
-            <form class="form-horizontal container-sm card justify-content-md-center">
-                <div class="form-group">
-                <label for="inputEmail3" class="col-form-label">Email</label>
-                <div>
-                  <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
-                </div>
-                </div>
+          <div class="col-md-8 mx-auto">
+            <table class="table table-bordered">
+<thead>
+  <tr>
+    <th scope="col">SNO</th>
+    <th scope="col">COMPANY NAME</th>
+    <th scope="col">CATEGORY</th>
+    <th scope="col">LOCATION</th>
+      <th scope="col">CAPACITY AVAILABLE</th>
+      <th scope="col">SELECT</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <th scope="row">1</th>
+    <td>AMCET</td>
+    <td>amcet@udom.ac.tz</td>
+    <td>6</td>
+    <td>3</td>
+      <td>
+        <div class="form-group">
+        <div>
+          <button type="submit" class="btn btn-primary btn-block">Select</button>
+        </div>
+        </div>
+      </td>
+  </tr>
+  <tr>
+    <th scope="row">2</th>
+    <td>UDOM</td>
+      <td>udom@udom.ac.tz</td>
+      <td>9</td>
+      <td>4</td>
+      <td>
+        <div class="form-group">
+        <div>
+          <button type="submit" class="btn btn-primary btn-block">Select</button>
+        </div>
+        </div>
+      </td>
+  </tr>
 
-
-                <div class="form-group">
-                <label for="inputPassword3" class="col-form-label">Password</label>
-                <div>
-                  <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
-                </div>
-                </div>
-
-
-                <div class="form-group">
-                <div>
-                  <button type="submit" class="btn btn-primary btn-block">SIGN IN</button>
-                </div>
-                </div>
-
-
-                <div class="form-group">
-                <div style="text-align:center">
-                    <a href="#">Forgot Password</a>
-                </div>
-              </div>
-
-              <div class="form-group">
-              <div style="text-align:center">
-                  <a href="create_uni.html">Create Account</a>
-              </div>
-              </div> 
-                </form>
+  <tr>
+    <th scope="row">3</th>
+    <td>MUST</td>
+      <td>must@udom.ac.tz</td>
+      <td>8</td>
+      <td>5</td>
+      <td>
+        <div class="form-group">
+        <div>
+          <button type="submit" class="btn btn-primary btn-block">Select</button>
+        </div>
+        </div>
+      </td>
+  </tr>
+</tbody>
+</table>
           </div>
       </div>
 
         </div>
-       
+
+
+
+
+
 
     </body>
 </html>
