--- a/upload_chance.html
+++ b/upload_chance.html
@@ -60,10 +60,10 @@
           <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Service</a>
+          <a class="nav-link" href="#">Service</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="compan.html">Company</a>
+          <a class="nav-link" href="company.html">Company</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">University</a>
@@ -76,50 +76,54 @@
 
 
     <div class="container-fluid">
-      <h1 class="text-center">Login</h1>
+        <h1 class="text-center">Upload Available Chances</h1>
       <div class="row">
-          <div class="col-md-4 mx-auto">
+          <div class="col-md-6 mx-auto">
             <form class="form-horizontal container-sm card justify-content-md-center">
                 <div class="form-group">
-                <label for="inputEmail3" class="col-form-label">Email</label>
+                <label for="text" class="col-form-label">Level</label>
                 <div>
-                  <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                  <input type="radio"  id="inputLevel" name="di" placeholder="Level">Degree
+                  <input type="radio"  id="inputLevel" name="di" placeholder="Level">Diploama
+                 <input type="radio"  id="inputLevel" name="di" placeholder="Level"> Certificate
                 </div>
                 </div>
 
 
                 <div class="form-group">
-                <label for="inputPassword3" class="col-form-label">Password</label>
+                <label for="inputPassword3" class="col-form-label">Capacity</label>
                 <div>
-                  <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                  <input type="text" class="form-control" id="inputPassword3" placeholder="Capacity">
                 </div>
                 </div>
 
 
                 <div class="form-group">
+                <label for="inputPassword3" class="col-form-label">Program / activity</label>
                 <div>
-                  <button type="submit" class="btn btn-primary btn-block">SIGN IN</button>
+                  <input type="text" class="form-control" id="inputPassword3" placeholder="Program / activity">
                 </div>
                 </div>
+
+
 
 
                 <div class="form-group">
-                <div style="text-align:center">
-                    <a href="#">Forgot Password</a>
+                <div>
+                  <button type="submit" class="btn btn-primary" style="float:right">SUBMIT</button>
                 </div>
-              </div>
+                </div>
 
-              <div class="form-group">
-              <div style="text-align:center">
-                  <a href="create_uni.html">Create Account</a>
-              </div>
-              </div> 
+
                 </form>
           </div>
       </div>
+    </div>
 
-        </div>
-       
+
+
+
+
 
     </body>
 </html>
