--- a/compan.html
+++ b/compan.html
@@ -63,10 +63,10 @@
           <a class="nav-link" href="index.html">Service</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="compan.html">Company</a>
+          <a class="nav-link" href="company.html">Company</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">University</a>
+          <a class="nav-link" href="university.html">University</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">About</a>
@@ -113,13 +113,17 @@
               <div style="text-align:center">
                   <a href="create_uni.html">Create Account</a>
               </div>
-              </div> 
+              </div>
                 </form>
           </div>
       </div>
 
         </div>
-       
+
+
+
+
+
 
     </body>
 </html>
