--- a/company_applicant.html
+++ b/company_applicant.html
@@ -57,13 +57,13 @@
       <!-- Links -->
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Service</a>
+          <a class="nav-link" href="#">Service</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="compan.html">Company</a>
+          <a class="nav-link" href="company.html">Company</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">University</a>
@@ -76,50 +76,57 @@
 
 
     <div class="container-fluid">
-      <h1 class="text-center">Login</h1>
+      <h1 class="text-center">View Applicant</h1>
       <div class="row">
-          <div class="col-md-4 mx-auto">
-            <form class="form-horizontal container-sm card justify-content-md-center">
-                <div class="form-group">
-                <label for="inputEmail3" class="col-form-label">Email</label>
-                <div>
-                  <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
-                </div>
-                </div>
+          <div class="col-md-8 mx-auto">
+            <table class="table table-bordered">
+<thead>
+  <tr>
+    <th scope="col">SNO</th>
+    <th scope="col">NAME</th>
+    <th scope="col">COURSE</th>
+    <th scope="col">LEVEL</th>
+      <th scope="col">UNIVERSITY</th>
+      <th scope="col">EMAIL</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <th scope="row">1</th>
+    <td>Juma maulid</td>
+    <td>ISNT</td>
+    <td>4</td>
+    <td>AMCET</td>
+    <td>ashebby@outlook.com</td>
+  </tr>
+  <tr>
+    <th scope="row">2</th>
+    <td>Aisha Ismail</td>
+      <td>ICT</td>
+      <td>6</td>
+      <td>MUST</td>
+      <td>aisha3@gmail.com</td>
+  </tr>
 
-
-                <div class="form-group">
-                <label for="inputPassword3" class="col-form-label">Password</label>
-                <div>
-                  <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
-                </div>
-                </div>
-
-
-                <div class="form-group">
-                <div>
-                  <button type="submit" class="btn btn-primary btn-block">SIGN IN</button>
-                </div>
-                </div>
-
-
-                <div class="form-group">
-                <div style="text-align:center">
-                    <a href="#">Forgot Password</a>
-                </div>
-              </div>
-
-              <div class="form-group">
-              <div style="text-align:center">
-                  <a href="create_uni.html">Create Account</a>
-              </div>
-              </div> 
-                </form>
+  <tr>
+    <th scope="row">3</th>
+    <td>Ally Shabaan</td>
+      <td>CS</td>
+      <td>5</td>
+      <td>UDOM</td>
+      <td>ashebby@outlook.com</td>
+  </tr>
+</tbody>
+</table>
           </div>
       </div>
 
         </div>
-       
+
+
+
+
+
 
     </body>
 </html>
