--- a/create_uni.html
+++ b/create_uni.html
@@ -60,10 +60,10 @@
           <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Service</a>
+          <a class="nav-link" href="#">Service</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="compan.html">Company</a>
+          <a class="nav-link" href="company.html">Company</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">University</a>
@@ -76,14 +76,29 @@
 
 
     <div class="container-fluid">
-      <h1 class="text-center">Login</h1>
+        <h1 class="text-center">Create Account</h1>
       <div class="row">
-          <div class="col-md-4 mx-auto">
+          <div class="col-md-6 mx-auto">
             <form class="form-horizontal container-sm card justify-content-md-center">
                 <div class="form-group">
-                <label for="inputEmail3" class="col-form-label">Email</label>
+                <label for="inputEmail3" class="col-form-label">University name</label>
                 <div>
-                  <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                  <input type="text" class="form-control" id="inputName" placeholder="University name">
+                </div>
+                </div>
+
+                <div class="form-group">
+                  <label for="inputEmail3" class="col-form-label">College name</label>
+                  <div>
+                    <input type="text" class="form-control" id="inputCollege" placeholder="College name">
+                  </div>
+                  </div>
+
+
+                <div class="form-group">
+                <label for="inputPassword3" class="col-form-label">Email</label>
+                <div>
+                  <input type="text" class="form-control" id="inputPassword3" placeholder="Email">
                 </div>
                 </div>
 
@@ -97,29 +112,34 @@
 
 
                 <div class="form-group">
+                <label for="inputPassword3" class="col-form-label">Re-Type Password</label>
                 <div>
-                  <button type="submit" class="btn btn-primary btn-block">SIGN IN</button>
+                  <input type="password" class="form-control" id="inputPassword3" placeholder="Re-Type Password">
                 </div>
                 </div>
+
+
 
 
                 <div class="form-group">
-                <div style="text-align:center">
-                    <a href="#">Forgot Password</a>
+                <div>
+                  <button type="reset" class="btn btn-primary">RESET</button>
+                  <button type="submit" class="btn btn-primary" style="float:right">CREATE</button>
                 </div>
-              </div>
+                </div>
 
-              <div class="form-group">
-              <div style="text-align:center">
-                  <a href="create_uni.html">Create Account</a>
-              </div>
-              </div> 
+
                 </form>
           </div>
       </div>
 
+
         </div>
-       
+
+
+
+
+
 
     </body>
 </html>
